// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when get entity failed 1`] = `
<BasicSection>
  <Error
    type="DEFAULT"
  />
</BasicSection>
`;

exports[`should render correctly when get is in progress 1`] = `
<BasicSection>
  <BoxesLoader
    size="large"
    type="default"
  />
</BasicSection>
`;

exports[`should render correctly when has a talent entity 1`] = `
<FadeTransition
  appear={true}
  in={true}
  mountOnEnter={true}
  unmountOnExit={true}
>
  <BasicSection>
    <TalentDetail
      entity={
        FullTalent {
          "entity": Object {
            "id": "some-id",
          },
          "links": LinkCollection {
            "links": undefined,
          },
        }
      }
    />
  </BasicSection>
</FadeTransition>
`;

exports[`should render correctly when has a venue entity 1`] = `
<FadeTransition
  appear={true}
  in={true}
  mountOnEnter={true}
  unmountOnExit={true}
>
  <BasicSection>
    <VenueDetail
      entity={
        FullVenue {
          "entity": Object {
            "id": "some-id",
          },
          "links": LinkCollection {
            "links": undefined,
          },
          "postcodeDistrict": null,
        }
      }
    />
  </BasicSection>
</FadeTransition>
`;

exports[`should render correctly when has an entity but it has a different id 1`] = `
<BasicSection>
  <BoxesLoader
    size="large"
    type="default"
  />
</BasicSection>
`;

exports[`should render correctly when has an event entity 1`] = `
<FadeTransition
  appear={true}
  in={true}
  mountOnEnter={true}
  unmountOnExit={true}
>
  <BasicSection>
    <EventDetail
      entity={
        FullEvent {
          "entity": Object {
            "id": "some-id",
            "venue": Object {},
          },
          "eventSeries": null,
          "groupedDates": null,
          "links": LinkCollection {
            "links": undefined,
          },
          "postcodeDistrict": null,
          "tags": Array [],
          "talents": Array [],
          "venue": SummaryVenue {
            "entity": Object {},
            "postcodeDistrict": null,
          },
        }
      }
    />
  </BasicSection>
</FadeTransition>
`;

exports[`should render correctly when has an event series entity 1`] = `
<FadeTransition
  appear={true}
  in={true}
  mountOnEnter={true}
  unmountOnExit={true}
>
  <BasicSection>
    <EventSeriesDetail
      entity={
        FullEventSeries {
          "entity": Object {
            "id": "some-id",
          },
          "links": LinkCollection {
            "links": undefined,
          },
        }
      }
    />
  </BasicSection>
</FadeTransition>
`;

exports[`should render correctly when has no entity 1`] = `
<BasicSection>
  <BoxesLoader
    size="large"
    type="default"
  />
</BasicSection>
`;
